--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-543-breezed
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                             <li class="scroll-to-section"><a href="#about">About</a></li>
-                            <li> <a href="page2/index.html">Projects</a></li>
+                            <li> <a href="pendaftaran.html">Projects</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Drop Down</a>
                                 <ul>
@@ -506,7 +506,7 @@ https://templatemo.com/tm-543-breezed
                 </div>
                 <div class="col-lg-8 col-md-8 col-xs-12">
                     <div class="contact-form">
-                        <form id="contact" action="index.php" method="post">
+                        <form id="contact" action="pendaftaran.php" method="post">
                           <div class="row">
                             <div class="col-md-6 col-sm-12">
                               <fieldset>
